# arbiter

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  setup.cfg
backend/scripts/: benchmark.py
backend/src/arbiter/: __init__.py  api.py  baselines.py  director.py  domain.py  eval.py  fairness.py  generator.py  intake.py  llm.py  mcp_server.py  narration.py  protocol.py  scenarios.py  serialization.py  solver.py
backend/tests/: test_api.py  test_baselines.py  test_director.py  test_eval.py  test_fairness.py  test_generator.py  test_intake.py  test_llm.py  test_mcp_server.py  test_narration.py  test_protocol.py  test_scenarios.py  test_serialization.py  test_solver.py
docs/: architecture.md  deploy.md  submission.md
docs/superpowers/specs/: 2026-06-30-arbiter-design.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/components/: AdvocatePanel.tsx  Balance.tsx  DisputeBuilder.tsx  FairnessConsole.tsx  FairnessDial.tsx  HeroBalance.tsx  NegotiationStage.tsx  NegotiationView.tsx  SettlementCertificate.tsx  SiteFooter.tsx  SiteNav.tsx  TranscriptFeed.tsx  motion.tsx  useNegotiation.ts
frontend/src/lib/: api.ts  config.ts  negotiation.ts  palette.ts
