[project]
name = "arbiter"
version = "0.1.0"
description = "A society of AI advocates that negotiate provably fair settlements."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "mcp>=1.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "matplotlib>=3.8",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
